# myloasm

./: .gitignore  .gitmodules  .swp  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cmds.md  histo.py
.github/workflows/: build.yml
algorithm-docs/: algorithms.typ
src/: avx2_chaining.rs  avx2_seeding.rs  bam_parsing.rs  cli.rs  consensus.rs  constants.rs  graph.rs  kmer_comp.rs  lib.rs  main.rs  map_processing.rs  mapping.rs  mphmap.rs  polishing_mod.rs  seeding.rs  seq_parse.rs  skani_dereplicate.rs  small_genomes.rs  t  timing.rs  twin_graph.rs  types.rs  unitig.rs  unitig_utils.rs  utils.rs
src/etc/: cbloom.rs
src/kmc_reader/: kmc.rs  mod.rs
src/polishing/: alignment.rs  consensus.rs  consensus2.rs  main.rs  mod.rs
src/skani/: Cargo.toml
src/skani/src/: file_io.rs  lib.rs  params.rs  triangle.rs
tests/: integration_tests.rs
tests/reads/: 2kb_plas.fq  40kb_plas.fa  40kb_plas.fq
