[package]
name = "myloasm"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.5.0"
#simple_logger=  { version = "3", features = ["stderr"] }
flexi_logger = "0.29"
log = "0"
rayon = "1"
smallvec = { version = "1", features = ["union","serde","write"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = { version = "4.4", features = ["derive"] }
rust-htslib= { version = "0.46", default-features = false }
statrs = "0.16"
spmc = "0.3"
dashmap = "6"
fishers_exact = "1.0"
fxhash = "0"
bio-seq = { version = "0.14", features = ["serde"]}
rust-lapper = "1.1"
memory-stats = "1.2.0"
fastbloom = "0.8.0"
crossbeam-channel = "0.5.13"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
gzp = { version = "0.11.3", default-features = false, features = ["deflate_rust"] }
rand = "0.8.5"
ordered-float = { version = "4.0", default-features = false }
rust-spoa = { path = "src/rust-spoa" }


#crossbeam-utils = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_avx2"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { version = "0.5", features = ["simd_neon"] }


[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0"

[dev-dependencies]
#assert_cmd = "1.0.1"
#predicates = "1"
#serial_test = "*"
#rand = "0.8"
approx = "*"


[profile.release]
#panic = "abort"
#lto = true

[profile.dev]
#opt-level = 1
opt-level = 3
